# applitrack

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  drizzle.config.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: actions.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
backend/: .dockerignore  .env.example  .env.test.example  Dockerfile  Dockerfile.dev  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  wrangler.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_setup.py  002_add_attachment_key.py
backend/app/: db.py  deps.py  main.py  models.py  schemas.py
backend/app/core/: auth.py  config.py  storage.py
backend/app/routes/: __init__.py  applications.py  dashboard.py  status_flow.py
backend/app/services/: trends.py
backend/src/: index.ts  types.ts
backend/tests/: conftest.py  seed.py  test_applications.py  test_trends.py
components/: busyMan.tsx  columns.tsx  data-table.tsx  delete-account-dialog.tsx  exampleChart.tsx  exampleDataTable.tsx  exampleSanketDiagram.tsx  exampleSankeyDiagram.tsx  features.tsx  footer.tsx  googleAuth.tsx  gradientBackground.jsx  header-auth.tsx  homeButton.tsx  jobApplicationForm.tsx  landing.tsx  loginForm.tsx  pieChart.tsx  sankey-diagram.tsx  signupForm.tsx  statusSelect.tsx  theme-switcher.tsx  updatePasswordForm.tsx
db/: schema.ts
(+158 files in other folders)
